--- a/css/main.css
+++ b/css/main.css
@@ -931,8 +931,8 @@ body {
 }
 
 .contact__email-copy-icon:active {
-  -webkit-transform: scale(1.3) translateY(-15px);
-          transform: scale(1.3) translateY(-15px);
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
 }
 
 .contact__github {
