--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -184,7 +184,7 @@
                         transform: scale(1.2) translateY(-5px);
                 }
                 &:active {
-                        transform: scale(1.3) translateY(-15px)
+                        transform: scale(1.3) ;
                 }  
         }
         //third item of card
