--- a/css/main.css
+++ b/css/main.css
@@ -1101,7 +1101,6 @@ body {
   position: absolute;
   width: 100%;
   height: 2px;
-  margin-top: 5px;
   background-color: #2B6F71;
 }
 
@@ -1183,7 +1182,6 @@ body {
   position: absolute;
   width: 100%;
   height: 2px;
-  margin-top: 5px;
   background-color: #2B6F71;
 }
 
@@ -1273,7 +1271,6 @@ body {
   position: absolute;
   width: 100%;
   height: 2px;
-  margin-top: 5px;
   background-color: #2B6F71;
 }
 
@@ -1338,6 +1335,14 @@ body {
   font-weight: 100;
   font-size: 25px;
   color: #2B6F71;
+}
+
+.form__letter-counter {
+  color: black;
+  position: absolute;
+  right: 0;
+  bottom: -20px;
+  font-size: 13px;
 }
 
 .form__btn-send {
