--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -336,7 +336,6 @@
                 position: absolute;
                 width: 100%;
                 height: 2px;
-                margin-top: 5px;
                 background-color: $color-primary-green;
         }
 
@@ -397,7 +396,6 @@
                 position: absolute;
                 width: 100%;
                 height: 2px;
-                margin-top: 5px;
                 background-color: $color-primary-green;
         }
 
@@ -463,7 +461,6 @@
                 position: absolute;
                 width: 100%;
                 height: 2px;
-                margin-top: 5px;
                 background-color: $color-primary-green;
         }
 
@@ -506,6 +503,16 @@
                         font-size: 25px;
                         color: $color-primary-green;
                 }
+        }
+
+        &__letter-counter{
+                // color: rgb(52, 164, 255);
+                color: black;
+                // background-color: red;
+                position: absolute;
+                right: 0;
+                bottom:-20px;
+                font-size: 13px;
         }
 
         &__btn-send {
