--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@ body {
   background-image: url("./../img/architectural-design-architecture-buildings-city-374811.jpg");
   background-size: cover;
   overflow-x: hidden;
+  overflow-y: scroll;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -50,13 +51,8 @@ body {
   width: 100vw;
 }
 
-@media only screen and (max-width: 84.375em) {
-  body {
-    overflow-y: auto;
-  }
-}
-
 .container {
+  margin-bottom: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -93,11 +89,20 @@ body {
 }
 
 .title {
+  width: 100%;
   text-align: center;
   font-size: 7rem;
   color: white;
-  text-shadow: 10px 10px 10px black;
-  margin-top: auto 0;
+  text-shadow: 3px 3px 10px black;
+  margin-bottom: 5rem;
+  margin-top: 80px;
+}
+
+@media only screen and (max-width: 28.125em) {
+  .title {
+    margin-left: 0;
+    font-size: 6rem;
+  }
 }
 
 .card {
@@ -109,6 +114,7 @@ body {
   position: relative;
   z-index: 2;
   margin: 3rem;
+  margin-bottom: auto;
 }
 
 .card__printing-paper {
@@ -178,7 +184,7 @@ body {
           align-items: center;
   height: 100%;
   width: 100%;
-  background-color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .card__side-back {
@@ -196,7 +202,7 @@ body {
           flex-direction: column;
   -webkit-transform: rotateY(180deg);
           transform: rotateY(180deg);
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.9);
 }
 
 .card__info {
@@ -211,6 +217,7 @@ body {
   transition: -webkit-transform .3s;
   transition: transform .3s;
   transition: transform .3s, -webkit-transform .3s;
+  z-index: 10;
 }
 
 .card__info:hover {
@@ -287,6 +294,10 @@ body {
   pointer-events: none;
 }
 
+.card__icon-5-animation {
+  position: relative;
+}
+
 .card__title {
   text-align: center;
   font-size: 3rem;
@@ -298,6 +309,21 @@ body {
 .card__link, .card__link:link, .card__link:visited {
   text-decoration: none;
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+  width: 100%;
 }
 
 .card__link--pacman:hover .card__icon--1 {
@@ -380,6 +406,7 @@ body {
   margin: 1rem;
   margin-top: 0;
   overflow-y: auto;
+  padding: 1rem;
 }
 
 .back-all-card {
