--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -64,6 +64,7 @@ body {
     background-image: url("./../img/architectural-design-architecture-buildings-city-374811.jpg");
     background-size: cover;
     overflow-x: hidden;
+    overflow-y: scroll;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -74,8 +75,8 @@ body {
     min-height: 100vh;
     width: 100vw;
 
-    @media only screen and (max-width: $bp-largest) {
-        overflow-y: auto;
-    }
+    // @media only screen and (max-width: $bp-largest) {
+    //     overflow-y: auto;
+    // }
 
 }
