--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,11 +1,12 @@
 .contact {
-        
+
         width: 60vw;
         height: 700px;
         color: $color-primary-green;
         z-index: 2;
         position: relative;
         backface-visibility: hidden;
+        // transition: all $basic-transition-time;
         transition: all $basic-transition-time;
         margin-left: var(--menu-close-width);
         //perfect spin
@@ -16,7 +17,7 @@
                 height: 700px;
                 width: 50vw;
         }
-       
+
         @media only screen and (max-width: $bp-small-c) {
 
                 margin-top: 130;
@@ -24,9 +25,11 @@
                 margin-left: 0;
                 width: 70vw;
         }
+
         @media only screen and (max-width: $bp-smaller-c) {
                 width: 90vw;
         }
+
         @media only screen and (max-width: $bp-smallest-c) {
                 width: 100vw;
         }
@@ -65,77 +68,85 @@
 
         }
 
-        
 
-        
+
+
 
         &__info {
-               
+
                 font-size: 4rem;
                 margin-left: 5rem;
                 margin-top: 8rem;
-               
+
                 @media only screen and (max-width: $bp-largest-c) {
                         font-size: 3rem;
-                        display:flex;
+                        display: flex;
                         flex-direction: column;
                         align-items: flex-start;
                 }
+
                 @media only screen and (max-width: $bp-large-c) {
                         font-size: 2rem;
-                        display:flex;
+                        display: flex;
                         flex-direction: column;
                         align-items: flex-start;
                 }
+
                 @media only screen and (max-width: $bp-medium-c) {
                         margin-top: 6rem;
                         margin-left: 2rem;
                 }
-               
-                
+
+
         }
 
         // contact items styling
-        &__info-item{
+        &__info-item {
                 margin-top: 4rem;
                 margin-left: 2rem;
+
                 @media only screen and (max-width: $bp-medium-c) {
                         margin-left: 0;
                         margin-top: 5rem;
                 }
         }
+
         //first item of card
-        &__name-surname{
+        &__name-surname {
                 display: flex;
+
                 @media only screen and (max-width: $bp-smaller-c) {
                         flex-direction: column;
                 }
-                
-        }
-        &__name-surname-title{
 
         }
-        &__name-surname-data{
+
+        &__name-surname-title {}
+
+        &__name-surname-data {
                 margin-left: 2rem;
+
                 @media only screen and (max-width: $bp-smaller-c) {
                         margin-left: 0rem;
                 }
-                
+
         }
+
         //second item of card
-        &__email{
+        &__email {
                 display: flex;
+
                 @media only screen and (max-width: $bp-smaller-c) {
                         flex-direction: column;
                 }
         }
-        &__email-title{
 
-        }
-        &__email-data{
+        &__email-title {}
 
-        }
-        &__email-link{
+        &__email-data {}
+
+        &__email-link {
+
                 &,
                 &:link,
                 &:visited {
@@ -143,10 +154,11 @@
                         margin-left: 2rem;
                         text-decoration: none;
                         color: inherit;
+
                         @media only screen and (max-width: $bp-smaller-c) {
                                 margin-left: 0rem;
                         }
-                        
+
                 }
 
                 &::before {
@@ -167,38 +179,44 @@
                         left: 0;
                 }
         }
-        &__email-copy-icon{
+
+        &__email-copy-icon {
                 width: 30px;
                 height: 30px;
                 margin-left: 20px;
                 fill: $color-secondary-orange;
                 transition: all .2s;
                 cursor: pointer;
+
                 @media only screen and (max-width: $bp-large-c) {
                         width: 20px;
                         height: 20px;
                 }
 
-                
+
                 &:hover {
                         transform: scale(1.2) translateY(-5px);
                 }
+
                 &:active {
-                        transform: scale(1.3) ;
-                }  
+                        transform: scale(1.3);
+                }
         }
+
         //third item of card
-        &__github{
+        &__github {
                 display: flex;
+
                 @media only screen and (max-width: $bp-smaller-c) {
                         flex-direction: column;
                 }
-               
-        }
-        &__github-title{
 
         }
-        &__github-link{
+
+        &__github-title {}
+
+        &__github-link {
+
                 &,
                 &:link,
                 &:visited {
@@ -206,10 +224,11 @@
                         position: relative;
                         text-decoration: none;
                         color: inherit;
+
                         @media only screen and (max-width: $bp-smaller-c) {
                                 margin-left: 0rem;
                         }
-                        
+
                 }
 
                 &::before {
@@ -231,7 +250,7 @@
                 }
         }
 
-        
+
 
         &__btn {
                 background-color: $color-primary-green;
@@ -269,8 +288,9 @@
                 font-size: 4rem;
                 font-weight: normal;
                 text-align: center;
+
                 @media only screen and (max-width: $bp-medium-c) {
-  
+
                         margin-top: 5rem;
                 }
         }
@@ -285,20 +305,21 @@
                 transition: all $basic-transition-time;
                 cursor: pointer;
                 z-index: 999;
+
                 @media only screen and (max-width: $bp-medium-c) {
-  
+
                         top: 10px;
                         right: 20px;
                 }
-                
+
 
                 &:hover {
                         transform: scale(1.1) translateY(-10px);
                 }
         }
-      
 
-       
+
+
 
 }
 
@@ -312,15 +333,16 @@
 
         @media only screen and (max-width: $bp-large-c) {
                 width: 80%;
-                
-        }
-        @media only screen and (max-width: $bp-medium-c) {
-                width: 95%;
-                
+
         }
 
-       
-        
+        @media only screen and (max-width: $bp-medium-c) {
+                width: 95%;
+
+        }
+
+
+
         //FIELD 1
         &__your-name-surname {
                 width: 90%;
@@ -332,14 +354,14 @@
 
         }
 
-        &__underline-name-surname{
+        &__underline-name-surname {
                 position: absolute;
                 width: 100%;
                 height: 2px;
                 background-color: $color-primary-green;
         }
 
-        &__name-surname-error{
+        &__name-surname-error {
                 position: absolute;
                 bottom: -30px;
                 left: 70px;
@@ -391,15 +413,14 @@
                 position: relative;
         }
 
-        &__underline-email
-        {
+        &__underline-email {
                 position: absolute;
                 width: 100%;
                 height: 2px;
                 background-color: $color-primary-green;
         }
 
-        &__email-error{
+        &__email-error {
                 position: absolute;
                 bottom: -30px;
                 left: 70px;
@@ -449,6 +470,7 @@
                 align-items: flex-start;
                 justify-content: flex-start;
                 position: relative;
+
                 @media only screen and (max-width: $bp-medium-c) {
                         height: 250px;
                 }
@@ -464,7 +486,7 @@
                 background-color: $color-primary-green;
         }
 
-        &__message-error{
+        &__message-error {
                 position: absolute;
                 bottom: -30px;
                 left: 50%;
@@ -505,13 +527,13 @@
                 }
         }
 
-        &__letter-counter{
+        &__letter-counter {
                 // color: rgb(52, 164, 255);
                 color: black;
                 // background-color: red;
                 position: absolute;
                 right: 0;
-                bottom:-20px;
+                bottom: -20px;
                 font-size: 13px;
         }
 
@@ -532,7 +554,8 @@
         }
 
 }
-.correct-mail-send{
+
+.correct-mail-send {
         position: absolute;
         top: 0px;
         background-color: rgb(255, 255, 255);
