--- a/scss/_projects.scss
+++ b/scss/_projects.scss
@@ -1,5 +1,5 @@
 .container {
-
+    margin-bottom: auto;
     display: flex;
     justify-items: center;
     align-items: center;
@@ -31,13 +31,19 @@
 }
 
 .title {
-    // width: 100%;
+    width: 100%;
     text-align: center;
     font-size: 7rem;
     color: white;
-    text-shadow: 10px 10px 10px black;
-    // margin-bottom: 10rem;
-    margin-top: auto 0;
+    text-shadow: 3px 3px 10px black;
+    // margin-left: var(--menu-close-width);
+    margin-bottom: 5rem;
+    margin-top: 80px;
+
+    @media only screen and (max-width: $bp-small) {
+        margin-left: 0;
+        font-size: 6rem;
+    }
 }
 
 .card {
@@ -51,6 +57,7 @@
     position: relative;
     z-index: 2;
     margin: 3rem;
+    margin-bottom: auto;
 
 
     &__printing-paper {
@@ -110,7 +117,7 @@
             align-items: center;
             height: 100%;
             width: 100%;
-            background-color: rgba(#fff, 0.6);
+            background-color: rgba(#fff, 0.8);
         }
 
         &-back {
@@ -125,7 +132,7 @@
             flex-direction: column;
 
             transform: rotateY(180deg);
-            background-color: rgba($color: #fff, $alpha: 0.8)
+            background-color: rgba($color: #fff, $alpha: 0.9)
         }
     }
 
@@ -139,7 +146,7 @@
         right: 5px;
         cursor: pointer;
         transition: transform .3s;
-        // border-radius: 100%;
+        z-index: 10;
 
         &:hover {
             transform: translateY(-.6rem);
@@ -217,8 +224,10 @@
             transition: all 1s;
             pointer-events: none;
         }
+    }
 
-
+    &__icon-5-animation {
+        position: relative;
     }
 
     &__title {
@@ -240,6 +249,12 @@
         &:visited {
             text-decoration: none;
             position: relative;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100%;
+            width: 100%;
         }
 
         &--pacman:hover .card__icon--1 {
@@ -292,6 +307,7 @@
 
     }
 
+
     //back side styling
 
     &__back-icon {
@@ -317,6 +333,7 @@
         margin: 1rem;
         margin-top: 0;
         overflow-y: auto;
+        padding: 1rem;
     }
 
 }
